tests/bad/match_not_enum.ae
/// fail: Match expression must be enum/integer/char/string

def main() {
    match 3.14159 {

    }
}